--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         margin-bottom: 40px;
         background-color: lime;
       }
+
+      #blue {background-color: blue;}
     </style>
   </head>
   <body>
