주석 수정했습니다~!~!

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </style>
   </head>
   <body>
-    <!-- id red는 진우가 작성 -->
-    <!-- id yellow는 내가 작성 -->
-    <!-- id blue는 혜민이 작성 -->
+    <!-- id red는 혜연이 작성 -->
+    <!-- id yellow는 예은이 작성 -->
+    <!-- id blue는 은정이 작성 -->
     <h1>충돌 연습</h1>
     <section id="red"></section>
     <section id="yellow"></section>
