--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         margin-bottom: 40px;
         background-color: lime;
       }
+      #red {
+        background-color: red;
+      }
       #yellow {
         background-color: yellow;
       }
