퍼플도 추가해봄

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       #yellow {
         background-color: yellow;
       }
-      #blue {background-color: blue;}
+      #blue {
+        background-color: blue;
+      }
+      #purple {
+        background-color: purple;
+      }
     </style>
   </head>
   <body>
@@ -28,5 +33,6 @@
     <section id="red"></section>
     <section id="yellow"></section>
     <section id="blue"></section>
+    <section id="purple"></section>
   </body>
 </html>
